k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: anon-proxy
  labels:
    app.kubernetes.io/part-of: tor-server
