k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dd-fabrication-server
  namespace: daedalus
  labels:
    app: dd-fabrication-server
    app.kubernetes.io/part-of: daedalus
spec:
  type: ClusterIP
  selector:
    app: dd-fabrication-server
  ports:
    - name: http
      port: 8113
      targetPort: http
